/**
 * BrowserONCEKernel - Browser/PWA ONCE Kernel Implementation (TypeScript)
 * 
 * NOTE: Currently using JavaScript version at src/view/js/once-browser-kernel.js
 * This TypeScript file is a stub for future compilation to JavaScript
 * 
 * @pdca session/2025-11-22-UTC-2200.iteration-01.8-unified-kernel-architecture.pdca.md
 */

import { AbstractONCEKernel } from './AbstractONCEKernel.js';

export class BrowserONCEKernel extends AbstractONCEKernel {
    constructor() {
        super();
    }
    
    async init(scenario?: any): Promise<this> {
        // TODO: Implement browser kernel initialization
        console.warn('[BrowserONCEKernel] TypeScript version not yet implemented');
        console.warn('[BrowserONCEKernel] Using JavaScript version from src/view/js/once-browser-kernel.js');
        return this;
    }
    
    async getHealth(): Promise<any> {
        return { status: 'not-implemented', message: 'Use JS version' };
    }
    
    async invokeMethod(method: string, params: any): Promise<any> {
        return null;
    }
    
    async start(): Promise<void> {
        // No-op stub
    }
    
    async stop(): Promise<void> {
        // No-op stub
    }
}

